@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
    Copyright (c) 1990 - 1994, Julianne Frances Haugh
-   Copyright (c) 2007 - 2008, Nicolas François
+   Copyright (c) 2007 - 2011, Nicolas François
    All rights reserved.
   
    Redistribution and use in source and binary forms, with or without
@@ -52,8 +52,8 @@
       <arg choice='opt'>
 	<replaceable>options</replaceable>
       </arg>
-      <arg choice='opt'>
-        <replaceable>LOGIN</replaceable>
+      <arg choice='plain'>
+	<replaceable>LOGIN</replaceable>
       </arg>
     </cmdsynopsis>
   </refsynopsisdiv>
